<resources>
    <string name="app_name">BirthdayTApp</string>
    <string name="TextView_name">showText</string>
    <string name="Button_name">btn1</string>
    <string name="EditView_name">inputText</string>
    <string name="btn_lable">Button</string>
    <string name="Edtext">请输入</string>
    <string name="Tvtext">hello</string>
    <string name="lable_add1">+1point</string>
    <string name="lable_add2">+2point</string>
    <string name="lable_add3">+3point</string>
    <string name="btn_reset_label">Reset</string>

    <style name="AppThone" parent="Theme.AppCompat.Light.DarkActionBar">

        <item name="colorButtonNormal">@android:color/holo_orange_light</item>
    </style>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tip_weight">Input your weight(KG)</string>
    <string name="tip_height">Input your height(cm)</string>
    <string name="tip_btn">计算</string>
    <string name="rmb_show">Hello</string>
    <string name="rmb_inp_tip">Input RMB</string>
    <string name="btn_dollar_lable">dollar</string>
    <string name="btn_euro_lable">euro</string>
    <string name="btn_won_lable">won</string>
    <string name="menu_setting_lbael">settings</string>
    <string name="btn_config_label">config</string>
    <string name="input_hint">Input RMB</string>
    <string name="btn_dollar_label">dollar</string>
    <string name="btn_euro_label">euro</string>
    <string name="btn_won_label">won</string>
    <string name="label_hello">hello</string>
    <string name="final_text_welcome1">欢迎来到喵喵健康</string>
    <string name="final_text_welcome2">我是你的健康助手小u</string>
    <string name="final_btn_1">点击进入</string>
    <string name="final_text_page1">首页</string>
    <string name="final_text_page1_btn2">BMI喵星人</string>
    <string name="final_text_page1_btn3">喵体日记</string>
    <string name="final_text_page1_btn4">喵力全开</string>
    <string name="final_text_page1_btn5">喵喵食谱</string>
    <string name="final_text_page1_btn2_T1">身高（米）</string>
    <string name="final_text_page1_btn2_E1">请输入您的身高（例如1.75）</string>
    <string name="final_text_page1_btn2_T2">体重（千克）</string>
    <string name="final_text_page1_btn2_E2">请输入您的体重（例如65）</string>
    <string name="final_text_page1_btn2_B1">计算BMI</string>
    <string name="final_text_page1_btn3_T1">喵喵日记</string>
    <string name="final_text_page1_btn3_B1">新建</string>
    <string name="final_text_page1_btn3_B1_T1">标题</string>
    <string name="final_text_page1_btn3_B1_E1">输入标题</string>
    <string name="final_text_page1_btn3_B1_T2">内容</string>
    <string name="final_text_page1_btn3_B1_E2">输入内容</string>
    <string name="final_text_page1_btn3_B1_T3">时间</string>
    <string name="final_text_page1_btn3_B1_E3">输入时间（例如：2023-12-31）</string>
    <string name="final_text_page1_btn3_B1_B1">保存</string>
    <string name="final_text_page1_btn3_B1_B2">取消</string>



</resources>
