<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".Ratectivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:hint="@string/rmb_inp_tip"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rmb_show"
        android:text="@string/rmb_show"
        android:textSize="45sp"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_dollar"
        android:text="@string/btn_dollar_lable"
        android:layout_marginBottom="16dp"
        android:onClick="click"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_euro"
        android:text="@string/btn_euro_lable"

        android:onClick="clickOpen"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_won"
        android:text="@string/btn_won_lable"

        android:onClick="click"/>



</LinearLayout>