<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/showText"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:text="@string/Tvtext"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Edtext"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_weight="1"
        android:text="@string/btn_lable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="wrr" />

</LinearLayout>