<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txtout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:text="BMI" />

    <EditText
        android:id="@+id/inph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="16dp"
        android:inputType="number"
        android:hint="@string/tip_height" />
    <EditText
        android:id="@+id/inpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="16dp"
        android:inputType="number"
        android:hint="@string/tip_weight" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn"
        android:onClick="onClickBtn"
        android:text="@string/tip_btn" />
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginBottom="16dp"
        android:text="" />
</LinearLayout>